--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Popover</title>
 </head>
     <div class="container">
-        <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+        <button class="button" data-title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
     </div>
 <body>
 </body>
